--- a/review_html_OscarRealpe/cv-Oscar-Realpe.html
+++ b/review_html_OscarRealpe/cv-Oscar-Realpe.html
@@ -27,10 +27,10 @@
     <a href="#frases" style="margin:0 10px; color:#005bbb;">Frases</a>
   </nav>
 
-  <!-- CONTENEDOR -->
+  <!-- contenedor principal -->
   <div style="max-width:980px; margin:20px auto; padding:0 16px;">
 
-    <!-- OBJETIVO -->
+    <!-- descripción -->
     <section id="objetivo" style="padding:18px; background:white; margin-bottom:18px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
       <header>
         <h2 style="margin:0 0 10px 0; border-bottom:2px solid #005bbb;">Objetivo Profesional</h2>
@@ -42,12 +42,12 @@
       </p>
     </section>
 
-    <!-- LAYOUT 2 columnas -->
+    <!-- para dividir el contenido principal en columnas -->
     <div style="display:flex; gap:20px; align-items:flex-start; flex-wrap:wrap;">
       <!-- Columna principal -->
       <section style="flex:1 1 620px; min-width:300px;">
 
-        <!-- DATOS -->
+        <!-- datos personales -->
         <article id="datos" style="padding:18px; background:white; margin-bottom:18px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
           <header>
             <h2 style="margin:0 0 10px 0; border-bottom:1px solid #cfd8e3;">Datos Personales</h2>
@@ -59,7 +59,7 @@
           </p>
         </article>
 
-        <!-- FORMACION -->
+        <!-- formación -->
         <article id="formacion" style="padding:18px; background:white; margin-bottom:18px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
           <header>
             <h2 style="margin:0 0 10px 0; border-bottom:1px solid #cfd8e3;">Formación</h2>
@@ -70,7 +70,7 @@
           <p style="margin:6px 0;">Graduado en 2021 (institución privada).</p>
         </article>
 
-        <!-- PROYECTOS -->
+        <!-- proyectos personales -->
         <article id="proyectos" style="padding:18px; background:white; margin-bottom:18px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
           <header>
             <h2 style="margin:0 0 10px 0; border-bottom:1px solid #cfd8e3;">Proyectos</h2>
@@ -81,7 +81,7 @@
           </ul>
         </article>
 
-        <!-- HABILIDADES -->
+        <!-- habilidades -->
         <article id="habilidades" style="padding:18px; background:white; margin-bottom:18px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
             <header>
                 <h2 style="margin:0 0 10px 0; border-bottom:1px solid #cfd8e3;">Habilidades</h2>
@@ -105,7 +105,7 @@
             </ol>
         </article>
 
-        <!-- TABLA -->
+        <!-- tabla de resumen -->
         <article id="resumen-tecnico" style="padding:18px; background:white; margin-bottom:18px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
           <header>
             <h2 style="margin:0 0 10px 0; border-bottom:1px solid #ffd8e3;">Tabla — Resumen Técnico</h2>
@@ -135,7 +135,7 @@
           </table>
         </article>
 
-        <!-- FRASES: blockquote + pre -->
+        <!-- frases -->
         <article id="frases" style="padding:18px; background:white; margin-bottom:18px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
           <blockquote style="margin:8px 0; padding:8px 12px; background:#fafafa; border-left:4px solid #005bbb;">
             “El aprendizaje nunca agota la mente.” — Leonardo da Vinci
@@ -147,7 +147,7 @@
 
       </section>
 
-      <!-- ASIDE -->
+      <!-- aside -->
       <aside style="flex:1 1 260px; min-width:260px;">
         <section style="padding:18px; background:white; margin-bottom:18px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.08);">
           <header>
@@ -184,7 +184,7 @@
     </div>
   </div>
 
-  <!-- FOOTER con texto del taller -->
+  <!-- footer descriptivo -->
   <footer style="background:#005bbb; color:white; text-align:center; padding:12px; margin-top:10px;">
     Taller No 1. Repaso etiquetas HTML — <strong>Computación Grafica</strong><br>
     <small>Universidad de Nariño • © 2025 Oscar Felipe Realpe Bolaños</small>
